--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "perfect-freehand": "^1.2.2",
     "react": "^19.1.0",
@@ -16,9 +17,11 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "roughjs": "^4.6.6",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
