--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://sks372000:board123@cluster0.vs5zj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://pranjalpathak876:L6kf0Xuqm4m2AxLu@cluster0.rmvtz3v.mongodb.net/whiteboard?retryWrites=true&w=majority
